test/corpus/errors.txt
====================================
An error before a string literal
====================================

def a(b):
    c.

    """
    d
    """

    e

---

(module
  (function_definition
    (identifier)
    (parameters
      (identifier))
    (ERROR
      (identifier))
    (block
      (expression_statement
        (str
          (string_start)
          (string_content)
          (string_end)))
      (expression_statement
        (identifier)))))
